--- a/app/globals.css
+++ b/app/globals.css
@@ -10,9 +10,9 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --foreground-rgb: 255, 255, 255;
+    --foreground-rgb: 0, 0, 0;
     --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-end-rgb: 17, 24, 39;
   }
 }
 
@@ -24,6 +24,7 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+    font-family: var(--font-noto-sans); 
 }
 
 @layer utilities {
@@ -31,3 +32,5 @@ body {
     text-wrap: balance;
   }
 }
+h1,h2,h3,h4,h5{font-family: var(--font-poppins);}
+span.logoname{font-family: var(--font-rubik-glitch);}
